package de.daniel.marlinghaus.vidr.vulnerability.report.vo;

/**
 * Available CVSS severities for trivy report.
 */
public enum CvssSeverity {
  UNKNOWN, LOW, MEDIUM, HIGH, CRITICAL
}
