package de.daniel.marlinghaus.vidr.vulnerability.report.vo;

import java.util.List;
import javax.annotation.concurrent.Immutable;
import lombok.AllArgsConstructor;
import lombok.Builder.Default;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.ToString;
import lombok.experimental.SuperBuilder;

/**
 * view of deserialized vulnerability report.
 */
@SuperBuilder
@Getter
@Setter
@Immutable
@ToString
@AllArgsConstructor
@NoArgsConstructor
public abstract class VulnerabilityReport<T extends Vulnerability> {

  /**
   * name of the report file
   */
  private String fileName;
  /**
   * type of report
   */
  private String type;
  /**
   * list of scanned project vulnerabilities
   */
  @Default
  List<T> vulnerabilities = List.of();

  public String toPrettifiedString() {
    return toString().replace(", ", ",\n").replace("(", "(\n").replace(")", ")\n");
  }
}
