package de.daniel.marlinghaus.vidr.vulnerability.report.vo.trivy;

import com.fasterxml.jackson.annotation.JsonAlias;
import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
import de.daniel.marlinghaus.vidr.utils.configuration.CommaSeparatedStringToListDeserializer;
import de.daniel.marlinghaus.vidr.vulnerability.report.vo.CvssSeverity;
import de.daniel.marlinghaus.vidr.vulnerability.report.vo.Vulnerability;
import java.util.ArrayList;
import java.util.List;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.ToString;
import lombok.experimental.SuperBuilder;

//TODO fix shadowed properties
@SuperBuilder
@Getter
@Setter
@ToString
@AllArgsConstructor
@NoArgsConstructor
public class TrivyVulnerability extends Vulnerability {

  //deserialized fields
  @JsonAlias("PkgName")
  private String dependencyName;
  @JsonAlias("VulnerabilityID")
  private String cveId;
  @JsonAlias("Title")
  private String cveTitle;
  @JsonAlias("Severity")
  private CvssSeverity severity;
  @JsonAlias("InstalledVersion")
  private String actualVersion;
  @JsonAlias("FixedVersion")
  @JsonDeserialize(using = CommaSeparatedStringToListDeserializer.class)
  @Builder.Default
  private List<String> fixedVersions = new ArrayList<>();
  @JsonAlias("DataSource.URL")
  private String dataSource;
  @JsonAlias("SeveritySource")
  private String severitySource;
  //Timestamps need dependency jackson-datatype-jsr310 to be handled
//  @JsonAlias("PublishedDate")
//  private Instant published;
//  @JsonAlias("LastModifiedDate")
//  private Instant modified;

//  /**
//   * type of inspected artifact (default jar when analyzing sbom of a project)
//   */
//  @JsonAlias("Type")
//  private String type;
}
