package de.daniel.marlinghaus.vidr.vulnerability.resolve.vo;

import lombok.AccessLevel;
import lombok.Data;
import lombok.Getter;
import lombok.experimental.SuperBuilder;

/**
 * GAV (group, artifact, version) representation of a Dependency
 */
@SuperBuilder
@Data
public abstract class GavDependency {

  /**
   * Dependency group identifier
   */
  private String group;
  /**
   * Dependency artifact name
   */
  private String name;

  /**
   * Dependency version
   */
  private String version;

  /**
   * Identifies dependency by group and name
   */
  @Getter(AccessLevel.NONE)
  private String dependencyName;

  public String getDependencyName() {
    if (dependencyName == null) {
      setDependencyName(String.format("%s:%s", getGroup(), getName()));
    }

    return dependencyName;
  }
}
